search movie page spacing issues resolved

--- a/src/styles/pages/_search.scss
+++ b/src/styles/pages/_search.scss
@@ -18,8 +18,10 @@
 
 .search-wrapper { 
     padding-top: 50px;
-    padding-left: 80px;
+    margin-left: auto;
+    margin-right: auto;
     min-height: 100vh;
+    max-width: 390px;
 
     h1 {
         padding-bottom: 20px;
@@ -31,11 +33,6 @@
         font-size: 20px;
     }
 
-}
-
-.movie-grid {
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .search-crumb { 
@@ -56,12 +53,22 @@
     font-family: $bodyFont;
 }
 
+@media (min-width: 750px) {
+    .search-wrapper {
+        margin: auto;
+        max-width: 700px;
+        padding-bottom: 20px;
+    }
+}
+
+
 @media (min-width: 1100px) {
     .searchbar {
         width: 300px;
     }
 
     .search-wrapper {
+        max-width: 1050px;
         h1 {
             font-size: 50px;
         }
@@ -69,5 +76,12 @@
         p {
             font-size: 22px;
         }
+
+    }
+}
+
+@media (min-width: 1500px) {
+    .search-wrapper {
+        max-width: 1400px;
     }
 }
